apps/in-cluster/mail/bulwark/brand/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bulwark-brand
  labels:
    app.kubernetes.io/name: bulwark-brand
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bulwark-brand
  ports:
    - name: http
      port: 80
      targetPort: http
